--- a/qgismaps.html
+++ b/qgismaps.html
@@ -231,7 +231,11 @@ Cette carte a été produite à partir d’un MNS (Modèle Numérique de Surface
 Cette carte est un test. Je voulais essayé le plugin mais mon ordinateur avait du mal a suivre si la zone d'étude était trop éloignée. Je me suis donc contenté de 500 mètres.
 </p>
 <div class="gallery">
-<img src="maps/QGIS/PARIS_Notre_dame_de_Paris_500m.png" alt="Zone de visibilité de Notre-Dame de Paris sur 500m">
+<img
+  src="maps/QGIS/thumbs/THUMBS__PARIS_Notre_dame_de_Paris_500m.png"
+  data-full="maps/QGIS/PARIS_Notre_dame_de_Paris_500m.png"
+  alt="Zone de visibilité de Notre-Dame de Paris sur 500m"
+  loading="lazy">
 </div>
 </section>
 
@@ -251,7 +255,11 @@ Une fois les calculs terminés, je me suis concentré sur l’habillage de la ca
 Et oui… le phare de la tour Eiffel est malheureusement loupé.
 </p>
 <div class="gallery">
-<img src="maps/QGIS/PARIS_Tour_Effeil_3000m.png" alt="Zone de visibilité tour Eiffel sur 3km">
+<img
+  src="maps/QGIS/thumbs/THUMBS__PARIS_Tour_Effeil_3000m.png"
+  data-full="maps/QGIS/PARIS_Tour_Effeil_3000m.png"
+  alt="Zone de visibilité tour Eiffel sur 3km"
+  loading="lazy">
 </div>
 </section>
 
@@ -268,7 +276,11 @@ Certains triangles ont dû être supprimés manuellement car ils ne respectaient
 forme réelle des régions. Le travail s’est terminé par la symbologie.
 </p>
 <div class="gallery">
-<img src="maps/QGIS/FRANCE_origami.png" alt="France origami">
+<img
+  src="maps/QGIS/thumbs/THUMBS__FRANCE_origami.png"
+  data-full="maps/QGIS/FRANCE_origami.png"
+  alt="France origami"
+  loading="lazy">
 </div>
 </section>
 
@@ -286,12 +298,20 @@ pas eu le courage de refaire toutes les rues.
 
 <div class="version">Version 1</div>
 <div class="gallery">
-<img src="maps/QGIS/CHAUMONT_bancs_V1.png" alt="Bancs Chaumont v1">
+<img
+  src="maps/QGIS/thumbs/THUMBS__CHAUMONT_bancs_V1.png"
+  data-full="maps/QGIS/CHAUMONT_bancs_V1.png"
+  alt="Bancs Chaumont v1"
+  loading="lazy">
 </div>
 
 <div class="version">Version 2</div>
 <div class="gallery">
-<img src="maps/QGIS/CHAUMONT_bancs_V2.png" alt="Bancs Chaumont v2">
+<img
+  src="maps/QGIS/thumbs/THUMBS__CHAUMONT_bancs_V2.png"
+  data-full="maps/QGIS/CHAUMONT_bancs_V2.png"
+  alt="Bancs Chaumont v2"
+  loading="lazy">
 </div>
 </section>
 
@@ -320,7 +340,11 @@ Pour pouvoir ensuite donner des horaires précis aux points j'ai créer des cham
 <p>J'ai ensuite lancé le plugin TimeManager et fait défiler l'animation temporelle. Je n'ai plus eu qu'a fusionner les images capturées par le plugin pour faire ce GIF.</p>
 
 <div class="gallery">
-<img src="img/vol_chine.gif" alt="Vol vers la Chine animé (58Mo LMAO)">
+<img
+  src="img/vol_chine.gif"
+  data-full="img/vol_chine.gif"
+  alt="Vol vers la Chine animé (58Mo LMAO)"
+  loading="lazy">
 </div>
 </section>
 
@@ -330,7 +354,11 @@ Pour pouvoir ensuite donner des horaires précis aux points j'ai créer des cham
 <p>Cette carte a été produite avec les outils de base de QGIS.</p>
 <p>Rien de plus facile, j'ai du chercher le fond de carte adapté et j'ai placé à la main les points et lignes. Plus qu'à faire l'habillage de la carte.</p>
 <div class="gallery">
-<img src="maps/QGIS/CHINE_mon_voyage_2025.png" alt="Mon voyage en Chine">
+<img
+  src="maps/QGIS/thumbs/THUMBS__CHINE_mon_voyage_2025.png"
+  data-full="maps/QGIS/CHINE_mon_voyage_2025.png"
+  alt="Mon voyage en Chine"
+  loading="lazy">
 </div>
 </section>
 
@@ -340,7 +368,11 @@ Pour pouvoir ensuite donner des horaires précis aux points j'ai créer des cham
 <p>Cette carte a été produite avec les outils de base de QGIS.</p>
 <p>Je me suis encore une fois "baladé" sur Google StreetView à la recherche des panneaux de directions (hors autoroute) indiquant Chaumont le plus loin. Le visuel de la carte n'est vraiment pas bon mais je me suis dépêché sur la fin car je commençais à en avoir marre.</p>
 <div class="gallery">
-<img src="maps/QGIS/FRANCE_panneaux_direction_Chaumont.jpeg" alt="Signalisation de Chaumont en France">
+<img
+  src="maps/QGIS/thumbs/THUMBS__FRANCE_panneaux_direction_Chaumont.jpeg"
+  data-full="maps/QGIS/FRANCE_panneaux_direction_Chaumont.jpeg"
+  alt="Rayonnement de Chaumont en France"
+  loading="lazy">
 </div>
 </section>
 
@@ -351,7 +383,11 @@ Pour pouvoir ensuite donner des horaires précis aux points j'ai créer des cham
 <p>J'ai ajouté dans QGIS les données de OpenTopography DEM Downloader pour le dénivelé du terrain et j'y ai ajouté les données de la BDTOPO.</p>
 <p>Ensuite j'ai affiché en gris les bâtiments encore debout n'ayant pas de date de création dans les données et en rouge ceux en contenant une. J'ai mis le plugin TimeManager en marche avec le champ des données des bâtiments et j'ai lancé l'enregistrement que j'ai transformé en GIF. Les dates du GIF vont de 1450 à 2020 mais dans les données elles varient de 1300 à 2018.</p>
 <div class="gallery">
-<img src="maps/QGIS/CHAUMONT_date_batiments.gif" alt="Date des bâtiments de chaumont animé">
+<img
+  src="maps/QGIS/thumbs/THUMBS__CHAUMONT_date_batiments.gif"
+  data-full="maps/QGIS/CHAUMONT_date_batiments.gif"
+  alt="Date des bâtiments de chaumont animé"
+  loading="lazy">
 </div>
 </section>
 
@@ -362,7 +398,11 @@ Pour pouvoir ensuite donner des horaires précis aux points j'ai créer des cham
 <p>J'ai segmenté tous les 50m (je crois) le raster pour ensuite les vectoriser et y ajouter les couleurs. J'ai placé par dessus le relief en semi transparent et je trouve ce rendu juste magnifique.</p>
 
 <div class="gallery">
-<img src="maps/QGIS/HAUTE-MARNE_topographie.jpg" alt="Altitude de la Haute-Marne">
+<img
+  src="maps/QGIS/thumbs/THUMBS__HAUTE-MARNE_topographie.jpg"
+  data-full="maps/QGIS/HAUTE-MARNE_topographie.jpg"
+  alt="Altitude de la Haute-Marne"
+  loading="lazy">
 </div>
 </section>
 
@@ -415,17 +455,29 @@ make_line(<br>
 <p>J'ai eu du mal pour le choix des couleurs (que je n'apprécie toujours pas trop) mais voici le résultat final avec un planisphère et deux cartes en globe.</p>
 <div class="version">Version 1</div>
 <div class="gallery">
-<img src="maps/QGIS/MONDE_route_soie_V1.jpeg" alt="La route de la soie V1">
+<img
+  src="maps/QGIS/thumbs/THUMBS__MONDE_route_soie_V1.jpeg"
+  data-full="maps/QGIS/MONDE_route_soie_V1.jpeg"
+  alt="La route de la soie V1"
+  loading="lazy">
 </div>
 
 <div class="version">Version 2</div>
 <div class="gallery">
-<img src="maps/QGIS/MONDE_route_soie_V2.jpeg" alt="La route de la soie V2">
+<img
+  src="maps/QGIS/thumbs/THUMBS__MONDE_route_soie_V2.jpeg"
+  data-full="maps/QGIS/MONDE_route_soie_V2.jpeg"
+  alt="La route de la soie V2"
+  loading="lazy">
 </div>
 
 <div class="version">Version 3</div>
 <div class="gallery">
-<img src="maps/QGIS/MONDE_route_soie_V3.jpeg" alt="La route de la soie V3">
+<img
+  src="maps/QGIS/thumbs/THUMBS__MONDE_route_soie_V3.jpeg"
+  data-full="maps/QGIS/MONDE_route_soie_V3.jpeg"
+  alt="La route de la soie V3"
+  loading="lazy">
 </div>
 </section>
 
@@ -435,7 +487,11 @@ make_line(<br>
 <p>Cette carte ont été produite via les données de la BDTOPO de l'IGN.</p>
 <p>J'ai voulu faire un rendu plutôt joli en cercle avec un code qui n'affichait que les données de chaque couche à X mètres de distance au lieu de faire un vulgaire masque blanc..... Je trouve quand même le rendu très joli avec ces chemin de fer/tram en orange et les routes principales en bleu.</p>
 <div class="gallery">
-<img src="maps/QGIS/BORDEAUX.jpg" alt="Bordeaux">
+<img
+  src="maps/QGIS/thumbs/THUMBS__BORDEAUX.jpg"
+  data-full="maps/QGIS/BORDEAUX.jpg"
+  alt="Bordeaux"
+  loading="lazy">
 </div>
 </section>
 
@@ -447,22 +503,38 @@ make_line(<br>
 <p>Voici donc plusieurs cartes faites à la va vite :</p>
 <div class="version">Sur l'élévation du pays (bien délimité et non flou)</div>
 <div class="gallery">
-<img src="maps/QGIS/AUSTRALIE_elevation.jpeg" alt="Elevation de l'Australie">
+<img
+  src="maps/QGIS/thumbs/THUMBS__AUSTRALIE_elevation.jpeg"
+  data-full="maps/QGIS/AUSTRALIE_elevation.jpeg"
+  alt="Elevation de l'Australie"
+  loading="lazy">
 </div>
 
 <div class="version">Sur les routes principales</div>
 <div class="gallery">
-<img src="maps/QGIS/AUSTRALIE_major_roads.jpeg" alt="Les routes principales de l'Australie">
+<img
+  src="maps/QGIS/thumbs/THUMBS__AUSTRALIE_major_roads.jpeg"
+  data-full="maps/QGIS/AUSTRALIE_major_roads.jpeg"
+  alt="Les routes principales de l'Australie"
+  loading="lazy">
 </div>
 
 <div class="version">Sur les chemins de fer</div>
 <div class="gallery">
-<img src="maps/QGIS/AUSTRALIE_train.jpeg" alt="Les chemins de fer de l'Australie">
+<img
+  src="maps/QGIS/thumbs/THUMBS__AUSTRALIE_train.jpeg"
+  data-full="maps/QGIS/AUSTRALIE_train.jpeg"
+  alt="Les chemins de fer de l'Australie"
+  loading="lazy">
 </div>
 
 <div class="version">Sur la densité de population</div>
 <div class="gallery">
-<img src="maps/QGIS/AUSTRALIE_population_surface.jpeg" alt="La densité de population de l'Australie">
+<img
+  src="maps/QGIS/thumbs/THUMBS__AUSTRALIE_population_surface.jpeg"
+  data-full="maps/QGIS/AUSTRALIE_population_surface.jpeg"
+  alt="La densité de population de l'Australie"
+  loading="lazy">
 </div>
 </section>
 
@@ -472,7 +544,11 @@ make_line(<br>
 <p>Cette carte a été produite avec la BDATLI de l'IGN et le plugin Visibility Analysis.</p>
 <p>Le plus long a été d'insérer les vingtaines de fichiers par département. Ensuite je les ai fusionné puis j'ai lancé le plugin Visibility Analysis sur un rayon de 300km. J'avais la flemme de faire plus, on verra peut-être plus tard.</p>
 <div class="gallery">
-<img src="maps/QGIS/FRANCE_Mont_Blanc_300km.png" alt="La visibilité du Mont-Blanc sur 300km">
+<img
+  src="maps/QGIS/thumbs/THUMBS__FRANCE_Mont_Blanc_300km.png"
+  data-full="maps/QGIS/FRANCE_Mont_Blanc_300km.png"
+  alt="La visibilité du Mont-Blanc sur 300km"
+  loading="lazy">
 </div>
 </section>
 
@@ -482,7 +558,12 @@ make_line(<br>
 <p>Cette carte a été produite via les données de l'INAO, de Wikipédia et de la BDTOPO de l'IGN.</p>
 <p>Je suis passé par énormément de styles et de couleurs différentes (formes simplifiées, couleurs "liège" etc) mais j'ai retenu celle-ci car je ne souhaitais plus me casser la tête sur le sujet et que je la trouve plutôt correct. Le plus contraignant de cette carte était le filtrage manuel du fichier CSV de l'INAO avec ses 1,2 millions de lignes. Ce qui veut dire que je n'ai en surface QUE les données AOP et non les IGP (ce qui augmenterait par exemple la surface de la Lorraine) par pure flemme. J'avais des idées de décoration de la carte mais j'ai abandonné par manque de temps car je devais l'imprimer avant mon départ en Australie.</p>
 <div class="gallery">
-<img src="maps/QGIS/FRANCE_vignobles_AOP.jpeg" alt="Les vignobles AOP de France">
+<img
+  src="maps/QGIS/thumbs/THUMBS__FRANCE_vignobles_AOP.jpeg"
+  data-full="maps/QGIS/FRANCE_vignobles_AOP.jpeg"
+  alt="Les vignobles AOP de France"
+  loading="lazy">
+ <!--<img src="maps/QGIS/FRANCE_vignobles_AOP.jpeg" alt="Les vignobles AOP de France">-->
 </div>
 </section>
 
@@ -500,13 +581,21 @@ make_line(<br>
 </div>
 
 <script>
+/*document.querySelectorAll('.gallery img').forEach(img=>{
+	img.addEventListener('click',()=>{
+		const lb=document.getElementById('lightbox');
+		lb.style.display='flex';
+		lb.querySelector('img').src=img.src;
+	});
+});*/
 document.querySelectorAll('.gallery img').forEach(img=>{
   img.addEventListener('click',()=>{
-    const lb=document.getElementById('lightbox');
-    lb.style.display='flex';
-    lb.querySelector('img').src=img.src;
+    const lb = document.getElementById('lightbox');
+    lb.style.display = 'flex';
+    lb.querySelector('img').src = img.dataset.full;
   });
 });
+
 </script>
 
 </body>
