--- a/qgismaps.html
+++ b/qgismaps.html
@@ -576,7 +576,7 @@ make_line(<br>
 	    Réalisé par moi-même – pour mon propre plaisir
 	</footer>
 
-<div id="lightbox" onclick="this.style.display='none'">
+<div id="lightbox">
   <img src="" alt="">
 </div>
 
@@ -588,14 +588,31 @@ make_line(<br>
 		lb.querySelector('img').src=img.src;
 	});
 });*/
-document.querySelectorAll('.gallery img').forEach(img=>{
-  img.addEventListener('click',()=>{
-    const lb = document.getElementById('lightbox');
-    lb.style.display = 'flex';
-    lb.querySelector('img').src = img.dataset.full;
+</script>
+<script>
+const lightbox = document.getElementById('lightbox');
+const lightboxImg = lightbox.querySelector('img');
+
+
+/*document.querySelectorAll('.gallery img').forEach(img=>{
+	img.addEventListener('click',()=>{
+		const lb=document.getElementById('lightbox');
+		lb.style.display='flex';
+		lb.querySelector('img').src=img.src;
+	});
+});*/
+document.querySelectorAll('.gallery img').forEach(img => {
+  img.addEventListener('click', () => {
+    lightbox.style.display = 'flex';
+    lightboxImg.src = img.dataset.full;
   });
 });
 
+// fermeture + nettoyage
+lightbox.addEventListener('click', () => {
+  lightbox.style.display = 'none';
+  lightboxImg.src = ''; // <-- LE POINT CLÉ
+});
 </script>
 
 </body>
