--- a/wonderdraftmaps.html
+++ b/wonderdraftmaps.html
@@ -250,17 +250,32 @@ Je voulais faire une carte de mon département avec un style ancien (ça rend BE
 	    Réalisé par moi-même – pour mon propre plaisir
 	</footer>
 
-<div id="lightbox" onclick="this.style.display='none'">
+<div id="lightbox">
   <img src="" alt="">
 </div>
-
 <script>
-document.querySelectorAll('.gallery img').forEach(img=>{
-  img.addEventListener('click',()=>{
-    const lb = document.getElementById('lightbox');
-    lb.style.display = 'flex';
-    lb.querySelector('img').src = img.dataset.full;
+const lightbox = document.getElementById('lightbox');
+const lightboxImg = lightbox.querySelector('img');
+
+
+/*document.querySelectorAll('.gallery img').forEach(img=>{
+	img.addEventListener('click',()=>{
+		const lb=document.getElementById('lightbox');
+		lb.style.display='flex';
+		lb.querySelector('img').src=img.src;
+	});
+});*/
+document.querySelectorAll('.gallery img').forEach(img => {
+  img.addEventListener('click', () => {
+    lightbox.style.display = 'flex';
+    lightboxImg.src = img.dataset.full;
   });
+});
+
+// fermeture + nettoyage
+lightbox.addEventListener('click', () => {
+  lightbox.style.display = 'none';
+  lightboxImg.src = ''; // <-- LE POINT CLÉ
 });
 </script>
 
