--- a/wonderdraftmaps.html
+++ b/wonderdraftmaps.html
@@ -122,15 +122,18 @@ section p{
 }
 
 .gallery img{
-  width:100%;
+  width:70%;
   margin-top:1.5rem;
   border-radius:12px;
   cursor:pointer;
   transition:transform .2s ease, box-shadow .2s ease;
+  filter: blur(0px) contrast(1);
+  transition: filter 0.2s ease, transform 0.2s ease;
 }
 
 .gallery img:hover{
-  transform:scale(1.01);
+  filter: blur(0);
+  transform: scale(1.01);
   box-shadow:0 10px 30px rgba(0,0,0,.15);
 }
 
