--- a/qgismaps.html
+++ b/qgismaps.html
@@ -88,13 +88,21 @@ body{
 }
 
 main{
-  max-width:950px;
+  max-width:1200px;
   margin:auto;
   padding:0 1.5rem 4rem;
-  display:flex;
-  flex-direction:column;
-  gap:3.5rem;
+
+  column-count: 2;
+  column-gap: 20px;
 }
+
+@media (max-width: 900px){
+  main{
+    column-count: 1;
+  }
+}
+
+
 
 section{
   background:var(--card);
@@ -102,6 +110,9 @@ section{
   border-radius:16px;
   padding:2.5rem;
   box-shadow:0 15px 30px rgba(0,0,0,0.05);
+  padding:2rem;
+  break-inside: avoid;
+  margin-bottom: 20px; /* espace vertical entre sections */
 }
 
 section h2{
@@ -122,7 +133,7 @@ section p{
 }
 
 .gallery img{
-  width:70%;
+  width:100%;
   margin-top:1.5rem;
   border-radius:12px;
   cursor:pointer;
@@ -208,9 +219,6 @@ code{
 	        </ul>
 	    </nav>
 	</header>
-
-<main>
-
 <div id="intro">
 	<h1>Productions cartographiques — QGIS</h1>
 	<p>
@@ -221,6 +229,9 @@ code{
 	Pour consulter les cartes en bonne qualité, il suffit de cliquer dessus.
 	</p>
 </div>
+<main>
+
+
 
 
 <section>
