--- a/qgismaps.html
+++ b/qgismaps.html
@@ -6,6 +6,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@600;700&display=swap" rel="stylesheet">
 
 <style>
 :root{
@@ -113,15 +114,9 @@ section{
 }
 
 section h2{
-  margin-top:0;
-  font-size:1.6rem;
-}
-
-section h2 a{
-  color:var(--text);
-  text-decoration:underline;
-  text-decoration-color:var(--accent);
-  text-underline-offset:5px;
+  text-align: center;
+  font-family: 'Poppins', sans-serif;
+  font-weight: 700;
 }
 
 section p{
@@ -233,7 +228,7 @@ code{
 
 
 <section>
-<h2><a href="#">La zone de visibilité de Notre-Dame de Paris</a></h2>
+<h2>La zone de visibilité de Notre-Dame de Paris</h2>
 <p>
 Cette carte a été produite à partir d’un MNS (Modèle Numérique de Surface) et du plugin
 <em>Visibility Analysis</em>.
@@ -252,7 +247,7 @@ Cette carte est un test. Je voulais essayé le plugin mais mon ordinateur avait 
 
 
 <section>
-<h2><a href="#">La zone de visibilité de la tour Eiffel</a></h2>
+<h2>La zone de visibilité de la tour Eiffel</h2>
 <p>
 Cette carte a été produite à partir d’un MNS (Modèle Numérique de Surface) et du plugin
 <em>Visibility Analysis</em>.
@@ -276,7 +271,7 @@ Et oui… le phare de la tour Eiffel est malheureusement loupé.
 
 
 <section>
-<h2><a href="#">La France et ses régions en origami</a></h2>
+<h2>La France et ses régions en origami</h2>
 <p>Cette carte a été réalisée exclusivement avec les outils natifs de QGIS.</p>
 <p>
 À partir des régions en format GeoJSON, je les ai d’abord simplifiées, puis séparées en
@@ -297,7 +292,7 @@ forme réelle des régions. Le travail s’est terminé par la symbologie.
 
 
 <section>
-<h2><a href="#">Les bancs de Chaumont</a></h2>
+<h2>Les bancs de Chaumont</h2>
 <p>Cette carte a été produite avec les outils de base de QGIS et un habillage issu des données de la BDTOPO.</p>
 <p>
 Le plus long a été la collecte de l’information : de nombreuses heures passées sur Google
@@ -328,7 +323,7 @@ pas eu le courage de refaire toutes les rues.
 
 
 <section>
-<h2><a href="#">Le trajet de mon vol vers la Chine</a></h2>
+<h2>Le trajet de mon vol vers la Chine</h2>
 <p>Cette carte a été réalisée avec les outils de base de QGIS et deux plugins.</p>
 <p>
 J’ai utilisé le plugin <em>Globe Builder</em> afin de produire une projection en globe.
@@ -361,7 +356,7 @@ Pour pouvoir ensuite donner des horaires précis aux points j'ai créer des cham
 
 
 <section>
-<h2><a href="#">MON VOYAGE EN CHINE</a></h2>
+<h2>MON VOYAGE EN CHINE</h2>
 <p>Cette carte a été produite avec les outils de base de QGIS.</p>
 <p>Rien de plus facile, j'ai du chercher le fond de carte adapté et j'ai placé à la main les points et lignes. Plus qu'à faire l'habillage de la carte.</p>
 <div class="gallery">
@@ -375,7 +370,7 @@ Pour pouvoir ensuite donner des horaires précis aux points j'ai créer des cham
 
 
 <section>
-<h2><a href="#">LES ROUTES EN DIRECTION DE CHAUMONT</a></h2>
+<h2>LES ROUTES EN DIRECTION DE CHAUMONT</h2>
 <p>Cette carte a été produite avec les outils de base de QGIS.</p>
 <p>Je me suis encore une fois "baladé" sur Google StreetView à la recherche des panneaux de directions (hors autoroute) indiquant Chaumont le plus loin. Le visuel de la carte n'est vraiment pas bon mais je me suis dépêché sur la fin car je commençais à en avoir marre.</p>
 <div class="gallery">
@@ -389,7 +384,7 @@ Pour pouvoir ensuite donner des horaires précis aux points j'ai créer des cham
 
 
 <section>
-<h2><a href="#">DATE DE CRÉATION DES BÂTIMENTS ENCORE EXISTANT A CHAUMONT</a></h2>
+<h2>DATE DE CRÉATION DES BÂTIMENTS ENCORE EXISTANT A CHAUMONT</h2>
 <p>Cette carte a été produite via les données de la BDTOPO et deux plugins, TimeManager et OpenTopography DEM Downloader.</p>
 <p>J'ai ajouté dans QGIS les données de OpenTopography DEM Downloader pour le dénivelé du terrain et j'y ai ajouté les données de la BDTOPO.</p>
 <p>Ensuite j'ai affiché en gris les bâtiments encore debout n'ayant pas de date de création dans les données et en rouge ceux en contenant une. J'ai mis le plugin TimeManager en marche avec le champ des données des bâtiments et j'ai lancé l'enregistrement que j'ai transformé en GIF. Les dates du GIF vont de 1450 à 2020 mais dans les données elles varient de 1300 à 2018.</p>
@@ -404,7 +399,7 @@ Pour pouvoir ensuite donner des horaires précis aux points j'ai créer des cham
 
 
 <section>
-<h2><a href="#">VISUALISATION 3D DE LA HAUTE-MARNE</a></h2>
+<h2>VISUALISATION 3D DE LA HAUTE-MARNE</h2>
 <p>Cette carte a été produite via les données du MNT de l'IGN.</p>
 <p>J'ai segmenté tous les 50m (je crois) le raster pour ensuite les vectoriser et y ajouter les couleurs. J'ai placé par dessus le relief en semi transparent et je trouve ce rendu juste magnifique.</p>
 
@@ -419,7 +414,7 @@ Pour pouvoir ensuite donner des horaires précis aux points j'ai créer des cham
 
 
 <section>
-<h2><a href="#">TEST DE CARTE DE DÉPLACEMENT</a></h2>
+<h2>TEST DE CARTE DE DÉPLACEMENT</h2>
 <p>Cette carte a été produite avec ma mémoire, GoogleMaps et Flightradar24.</p>
 <p>J'ai retracé à la main les trajets sur les routes pour visualiser où nous sommes passé. Pour ce qui est des horaires, J'ai juste mis l'heure de départ et l'heure d'arrivée. Ensuite j'ai utilisé la fonction native de QGIS pour tracer des points tous les X km sur les lignes et j'y ai mis l'image du type de transport dessus et j'ai ajouté deux champs calculé. Ce sont les mêmes que pour cette carte ci : Mon voyage vers la chine.</p>
 <p>J'ai par la suite fait un atlas pour imprimer chaque image que j'ai fusionné pour faire ce fichier mp4 avec Shutter encoder.</p>
@@ -437,7 +432,7 @@ Pour pouvoir ensuite donner des horaires précis aux points j'ai créer des cham
 
 
 <section>
-<h2><a href="#">CARTE DE LA ROUTE DE LA SOIE</a></h2>
+<h2>CARTE DE LA ROUTE DE LA SOIE</h2>
 <p>
 Cette carte a été produite avec wikipédia et quelques données sur internet.
 </p>
@@ -494,7 +489,7 @@ make_line(<br>
 
 
 <section>
-<h2><a href="#">CARTE DE BORDEAUX</a></h2>
+<h2>CARTE DE BORDEAUX</h2>
 <p>Cette carte ont été produite via les données de la BDTOPO de l'IGN.</p>
 <p>J'ai voulu faire un rendu plutôt joli en cercle avec un code qui n'affichait que les données de chaque couche à X mètres de distance au lieu de faire un vulgaire masque blanc..... Je trouve quand même le rendu très joli avec ces chemin de fer/tram en orange et les routes principales en bleu.</p>
 <div class="gallery">
@@ -508,7 +503,7 @@ make_line(<br>
 
 
 <section>
-<h2><a href="#">CARTES DE L'AUSTRALIE</a></h2>
+<h2>CARTES DE L'AUSTRALIE</h2>
 <p>Ces cartes ont été produite via les données de l'opendata de l'Australie.</p>
 <p>J'ai voulu voir comment été produite les données, comment été divisé le pays (départements, villes etc) (et j'étais perdu au début ahah...) et j'ai voulu découvrir le pays via ses données.</p>
 <p>Voici donc plusieurs cartes faites à la va vite :</p>
@@ -551,7 +546,7 @@ make_line(<br>
 
 
 <section>
-<h2><a href="#">LA ZONE DE VISIBILITÉ DU MONT-BLANC À 300KM</a></h2>
+<h2>LA ZONE DE VISIBILITÉ DU MONT-BLANC À 300KM</h2>
 <p>Cette carte a été produite avec la BDATLI de l'IGN et le plugin Visibility Analysis.</p>
 <p>Le plus long a été d'insérer les vingtaines de fichiers par département. Ensuite je les ai fusionné puis j'ai lancé le plugin Visibility Analysis sur un rayon de 300km. J'avais la flemme de faire plus, on verra peut-être plus tard.</p>
 <div class="gallery">
@@ -565,7 +560,7 @@ make_line(<br>
 
 
 <section>
-<h2><a href="#">LES VIGNOBLES AOP DE FRANCE</a></h2>
+<h2>LES VIGNOBLES AOP DE FRANCE</h2>
 <p>Cette carte a été produite via les données de l'INAO, de Wikipédia et de la BDTOPO de l'IGN.</p>
 <p>Je suis passé par énormément de styles et de couleurs différentes (formes simplifiées, couleurs "liège" etc) mais j'ai retenu celle-ci car je ne souhaitais plus me casser la tête sur le sujet et que je la trouve plutôt correct. Le plus contraignant de cette carte était le filtrage manuel du fichier CSV de l'INAO avec ses 1,2 millions de lignes. Ce qui veut dire que je n'ai en surface QUE les données AOP et non les IGP (ce qui augmenterait par exemple la surface de la Lorraine) par pure flemme. J'avais des idées de décoration de la carte mais j'ai abandonné par manque de temps car je devais l'imprimer avant mon départ en Australie.</p>
 <div class="gallery">
