--- a/qgismaps.html
+++ b/qgismaps.html
@@ -106,12 +106,12 @@ section{
   background:var(--card);
   border:1px solid var(--border);
   border-radius:16px;
-  padding:2.5rem;
   box-shadow:0 15px 30px rgba(0,0,0,0.05);
-  padding:2rem;
+  padding:0 2rem 2rem 2rem;
   break-inside: avoid;
   margin-bottom: 40px;
 }
+
 
 section h2{
   text-align: center;
