--- a/qgismaps.html
+++ b/qgismaps.html
@@ -112,7 +112,6 @@ section{
   margin-bottom: 40px;
 }
 
-
 section h2{
   text-align: center;
   font-family: 'Poppins', sans-serif;
@@ -213,7 +212,7 @@ code{
 	    </nav>
 	</header>
 <div id="intro">
-	<h1>Productions cartographiques — QGIS</h1>
+	<h1>Productions cartographiques sur QGIS</h1>
 	<p>
 	Toutes les cartes présentées ci-dessous ont été réalisées sous QGIS (3.34), uniquement par curiosité
 	et par envie d’expérimenter.  
@@ -228,7 +227,7 @@ code{
 
 
 <section>
-<h2>La zone de visibilité de Notre-Dame de Paris</h2>
+<h2>LA ZONE DE VISIBILITÉ<br>DE NOTRE-DAME DE PARIS</h2>
 <p>
 Cette carte a été produite à partir d’un MNS (Modèle Numérique de Surface) et du plugin
 <em>Visibility Analysis</em>.
@@ -247,7 +246,7 @@ Cette carte est un test. Je voulais essayé le plugin mais mon ordinateur avait 
 
 
 <section>
-<h2>La zone de visibilité de la tour Eiffel</h2>
+<h2>LA ZONE DE VISIBILITÉ DE LA TOUR EFFEIL</h2>
 <p>
 Cette carte a été produite à partir d’un MNS (Modèle Numérique de Surface) et du plugin
 <em>Visibility Analysis</em>.
@@ -271,7 +270,7 @@ Et oui… le phare de la tour Eiffel est malheureusement loupé.
 
 
 <section>
-<h2>La France et ses régions en origami</h2>
+<h2>LA FRANCE ET SES RÉGIONS EN ORIGAMI</h2>
 <p>Cette carte a été réalisée exclusivement avec les outils natifs de QGIS.</p>
 <p>
 À partir des régions en format GeoJSON, je les ai d’abord simplifiées, puis séparées en
@@ -292,7 +291,7 @@ forme réelle des régions. Le travail s’est terminé par la symbologie.
 
 
 <section>
-<h2>Les bancs de Chaumont</h2>
+<h2>LES BANCS DE CHAUMONT</h2>
 <p>Cette carte a été produite avec les outils de base de QGIS et un habillage issu des données de la BDTOPO.</p>
 <p>
 Le plus long a été la collecte de l’information : de nombreuses heures passées sur Google
@@ -323,7 +322,7 @@ pas eu le courage de refaire toutes les rues.
 
 
 <section>
-<h2>Le trajet de mon vol vers la Chine</h2>
+<h2>LE TRAJET DE MON VOL VERS LA CHINE</h2>
 <p>Cette carte a été réalisée avec les outils de base de QGIS et deux plugins.</p>
 <p>
 J’ai utilisé le plugin <em>Globe Builder</em> afin de produire une projection en globe.
@@ -546,7 +545,7 @@ make_line(<br>
 
 
 <section>
-<h2>LA ZONE DE VISIBILITÉ DU MONT-BLANC À 300KM</h2>
+<h2>LA ZONE DE VISIBILITÉ<br>DU MONT-BLANC À 300KM</h2>
 <p>Cette carte a été produite avec la BDATLI de l'IGN et le plugin Visibility Analysis.</p>
 <p>Le plus long a été d'insérer les vingtaines de fichiers par département. Ensuite je les ai fusionné puis j'ai lancé le plugin Visibility Analysis sur un rayon de 300km. J'avais la flemme de faire plus, on verra peut-être plus tard.</p>
 <div class="gallery">
