--- a/qgismaps.html
+++ b/qgismaps.html
@@ -206,7 +206,7 @@ code{
 	        <ul class="nav-links">
 	            <li><a href="index.html">Accueil</a></li>
 	            <li><a href="qgismaps.html" class="active">Cartes QGIS</a></li>
-	            <li><a href="wonderdraftmaps.html">Carte Wonderdraft</a></li>
+	            <li><a href="wonderdraftmaps.html">Cartes Wonderdraft</a></li>
 				<li><a href="30daymapchallenge.html">30 Day Map Challenge</a></li>
 	        </ul>
 	    </nav>
