--- a/wonderdraftmaps.html
+++ b/wonderdraftmaps.html
@@ -189,7 +189,7 @@ code{
 	        <ul class="nav-links">
 	            <li><a href="index.html">Accueil</a></li>
 	            <li><a href="qgismaps.html">Cartes QGIS</a></li>
-	            <li><a href="wonderdraftmaps.html" class="active">Carte Wonderdraft</a></li>
+	            <li><a href="wonderdraftmaps.html" class="active">Cartes Wonderdraft</a></li>
 				<li><a href="30daymapchallenge.html">30 Day Map Challenge</a></li>
 	        </ul>
 	    </nav>
