--- a/qgismaps.html
+++ b/qgismaps.html
@@ -207,7 +207,7 @@ code{
 	            <li><a data-i18n="nav_accueil" href="index.html">Accueil</a></li>
 	            <li><a data-i18n="nav_qgis" href="qgismaps.html" class="active">Cartes QGIS</a></li>
 	            <li><a data-i18n="nav_wonderdraft" href="wonderdraftmaps.html">Cartes Wonderdraft</a></li>
-				<li><a data-i18n="nav_30mdc" href="30daymapchallenge.html">30 Day Map Challenge</a></li>
+				<li><a data-i18n="nav_30dmc" href="30daymapchallenge.html">30 Day Map Challenge</a></li>
 	        </ul>
 	    </nav>
 	</header>
